--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -34,8 +34,10 @@ Use it to make something cool, have fun, and share what you've learned with othe
 // Partials
 @import "partials/header";
 @import "partials/video";
-@import "partials/fullpage";
+@import "partials/parallax";
 @import "partials/animation";
+@import "partials/form";
+@import "partials/card";
 @import "partials/carousel";
 @import "partials/footer";
 
