--- a/src/sass/blocks/_column.scss
+++ b/src/sass/blocks/_column.scss
@@ -7,13 +7,13 @@
         margin-top:0;
         margin-bottom:0;
         @media screen and (min-width: 768px) {
-            margin-top:110px;
-            margin-bottom:110px;
+            margin-top:0px;
+            margin-bottom:0;
         }
         h1,h2,h3 {
-            margin-bottom:40px;
+            //margin-bottom:40px;
             @media screen and (min-width: 768px) {
-                margin-bottom:60px;
+                //margin-bottom:60px;
             }
         }
         .btn-cta {
@@ -25,6 +25,7 @@
             position: relative;
             padding-bottom: 56.25%;
             height: 0;
+            margin:0;
             img {
                 position: absolute;
                 object-fit: cover;
@@ -44,12 +45,12 @@
         
         .slick-prev {
             //left: 25px;
-            left: 40px;
+            left: -40px;
             z-index: 10;
         }
         .slick-next {
             //right: 25px;
-            right: 40px;
+            right: -40px;
             z-index: 10;
         }
         .slick-dots {
