--- a/src/sass/partials/_card.scss
+++ b/src/sass/partials/_card.scss
@@ -2,10 +2,15 @@
     background-color: transparent;
     border: none;
     border-radius: 0;
+    display: block;
     //min-height: 830px;
-    margin-bottom:40px;
+    margin-bottom:30px;
     @media screen and (min-width: 768px) {
-        margin-bottom:60px;
+        //margin-bottom:60px;
+        margin-bottom:30px;
+    }
+    &-body {
+        padding: 0;
     }
     .background-thumb-wrapper {
         position: relative;
@@ -61,5 +66,10 @@
             }
             */
         }
+    }
+    .btn-cta {
+        width: 100%;
+        border: none;
+        border-radius: 0;
     }
 }
