--- a/src/sass/partials/_form.scss
+++ b/src/sass/partials/_form.scss
@@ -1,17 +1,17 @@
 
 .btn {
+  font-family: $font-bold;
+  font-size:20px;
+  line-height: 18px;
+
   text-transform: uppercase;
   text-decoration: none;
-  font-size:29px;
-  letter-spacing: 1.5;
-  font-family: $font-bold;
+
   border-radius: 0;
-  padding: 12px 35px;
+  padding: 14px 35px 10px 35px;
+  
   &:hover {
     text-decoration: none;
   }
-  &-primary, &:hover {
-    border:1px solid white;
-    background-color:transparent;
-  }
+
 }
