--- a/src/sass/partials/_card.scss
+++ b/src/sass/partials/_card.scss
@@ -71,5 +71,8 @@
         width: 100%;
         border: none;
         border-radius: 0;
+        color: white;
+        border-color: white;
+        background-color: $red;
     }
 }
