--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -41,4 +41,8 @@ Use it to make something cool, have fun, and share what you've learned with othe
 @import "partials/carousel";
 @import "partials/footer";
 
+// Templates
+@import "theme/pageform";
+
+
 
