--- a/src/sass/theme/_theme.scss
+++ b/src/sass/theme/_theme.scss
@@ -111,6 +111,11 @@ small {
     text-decoration:underline;
   }
 }
+.hv-100 {
+  min-height: 100%;
+  min-height: 100vh;
+  min-height: vh(100);
+}
 
 
 
