Counter and Instagram block

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -33,6 +33,9 @@ Use it to make something cool, have fun, and share what you've learned with othe
 @import "blocks/carousel";
 @import "blocks/tabs";
 @import "blocks/modal";
+@import "blocks/counter";
+@import "blocks/instagram";
+
 
 // Partials
 @import "partials/bootstrap";
