--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 @charset "UTF-8";
 /*
- Theme Name:   SEA Design
- Theme URI:    https://www.seadesign.com/
+ Theme Name:   Codigo
+ Theme URI:    https://codigo.co.uk
  Author: Pablo Rica & tone4hook
  Author URI: https://codigo.co.uk/team/pablo-rica
- Description: SEA Design theme based on WP Bootstrap 4 Sass Theme (https://github.com/tone4hook).
+ Description: Codigo.Co.Uk theme based on WP Bootstrap 4 Sass Theme (https://github.com/tone4hook).
  Version: 2.2.0
  License: MIT License
  License URI: https://opensource.org/licenses/MIT
