--- a/src/sass/partials/_header.scss
+++ b/src/sass/partials/_header.scss
@@ -88,13 +88,46 @@ nav.navbar {
 		padding: 0;
 		background-color: transparent;
 		border:none;
+		//Transition effect (requires jquery)
 		.icon-bar {
-			height:2px;
-			background-color: white;
-			width: 40px;
-			display: block;
-			margin: 8px 0;
-		}
+            display: block;
+            width: 25px;
+            height: 2px;
+            border-radius: 1px;
+            position: relative;
+            transition: all 500ms ease-in-out;
+            background-color:white;
+
+            &  + .icon-bar {
+                margin-top: 4px;
+            }
+            
+            &:nth-of-type(1) {
+                  top: 0;
+            }
+            &:nth-of-type(2) {
+                  top: 0;
+            }
+            &:nth-of-type(3) {
+                top: 0;
+            }
+        }
+        &.active {
+            .icon-bar {
+                &:nth-of-type(1) {
+                    top:5px;
+                    transform: rotate(45deg);
+                }
+                &:nth-of-type(2) {
+                    opacity:0;
+                    border:none;
+                }
+                &:nth-of-type(3) {
+                    top: -7px;
+                    transform: rotate(-45deg);
+                }
+            }
+        }
 	}
 	
 
