--- a/src/sass/custom-editor-style.scss
+++ b/src/sass/custom-editor-style.scss
@@ -1,7 +1,7 @@
 //Add your own editor styles here or import additional files
 
 // Grab our child theme variables
-@import "theme/child_theme_variables";
+@import "theme/codigo_variables";
 
 // Grab a few bootstrap assets so we can use mixins, variables, etc
 @import "assets/bootstrap5/functions";
@@ -34,4 +34,19 @@
 .editor-post-title .editor-post-title__input{
 	font-size: $h1-font-size;
 	font-weight: $headings-font-weight;
+}
+
+// Block group outlined
+.wp-block-group {
+    box-shadow: 1px 1px 1px 0px rgba(0,0,0,0.15);
+    margin-bottom: 10px !important;
+    .wp-block-group {
+        margin-left: 5px !important;
+        margin-right: 5px !important;
+        margin-bottom: 0 !important;
+        box-shadow: none;
+    }
+}
+.wp-block:hover {
+    border: 1px solid red;
 }
