--- a/src/sass/codigo.scss
+++ b/src/sass/codigo.scss
@@ -8,7 +8,9 @@
 @import "assets/underscores";                            // <------- Underscores media styles
 
 // Any additional imported files //
-@import "theme/codigo_theme";                             // <------- Add your styles into this file
 @import "assets/understrap/theme/colors";           // <-------- This creates the necessary bootstrap color classes.
 @import "assets/understrap/theme/blocks";           // <-------- This adds Bootstrap styles to blocks.
 @import "assets/understrap/theme/contact-form7";    // <-------- Contact Form 7 - Bootstrap 4 support
+
+@import "theme/codigo_theme";                             // <------- Add your styles into this file
+@import "theme/codigo_bootstrap";
