Updating fonts file

--- a/src/sass/codigo.scss
+++ b/src/sass/codigo.scss
@@ -1,10 +1,11 @@
+//@import "theme/codigo_fonts";                       // <------- Add your fonts into this file.
 @import "theme/codigo_variables";                   // <------- Add your variables into this file. Also add variables to overwrite Bootstrap variables here
-@import "assets/bootstrap5/bootstrap";                             // <------- Loads Bootstrap5
-@import "assets/understrap/theme/understrap";  // <------- Loads the Understrap defaults. Just a few classes to incorporate BS in WP
-@import "assets/understrap/theme/woocommerce"; // <------- Loads WooCommerce style fixes. Comment out if you aren't using WooCommerce
+@import "assets/bootstrap5/bootstrap";              // <------- Loads Bootstrap5
+@import "assets/understrap/theme/understrap";       // <------- Loads the Understrap defaults. Just a few classes to incorporate BS in WP
+@import "assets/understrap/theme/woocommerce";      // <------- Loads WooCommerce style fixes. Comment out if you aren't using WooCommerce
 
 // Optional files - If you don´t use the corresponding scripts/fonts comment em out
-@import "assets/fontawesome/font-awesome";                           // <------- Font Awesome Icon font
+@import "assets/fontawesome/font-awesome";               // <------- Font Awesome Icon font
 @import "assets/underscores";                            // <------- Underscores media styles
 
 // Any additional imported files //
@@ -12,5 +13,5 @@
 @import "assets/understrap/theme/blocks";           // <-------- This adds Bootstrap styles to blocks.
 @import "assets/understrap/theme/contact-form7";    // <-------- Contact Form 7 - Bootstrap 4 support
 
-@import "theme/codigo_theme";                             // <------- Add your styles into this file
+@import "theme/codigo_theme";
 @import "theme/codigo_bootstrap";
