--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 /*
  Theme Name:   Codigo
  Theme URI:    https://github.com/pablorica/wordpress_codigo_theme
- Description:  Wordpres Tempalte designed for City & Suburban by SEA Design
+ Description:  Wordpres Template based on Understrap Theme Framework:
  Author:       Pablo Rica & Understrap Contributors
  Author URI:   https://github.com/pablorica
  Template:     understrap
- Version:      3.1.6
+ Version:      3.1.7
  License: GNU General Public License v2 or later
  License URI: http://www.gnu.org/licenses/gpl-2.0.html
  Text Domain:  codigo
  Tags: one-column, custom-menu, featured-images, theme-options, translation-ready
- GitHub Theme URI: https://github.com/pablorica/citysuburban
+ GitHub Theme URI: https://github.com/pablorica/wordpress_codigo_theme
 */
